--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/img_background"
     android:layoutDirection="ltr"
-    tools:context=".GameActivity">
+    tools:context=".activities.GameActivity">
 
 
     <LinearLayout
