--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img_background_button"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ButtonFragment">
 
@@ -11,13 +12,14 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
 
+        android:layout_centerInParent="true"
         android:layout_marginTop="12dp"
         android:text="Easy"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:textSize="50sp"
         app:cornerRadius="50dp"
-        app:strokeColor="@color/black" />
+        app:strokeColor="@color/white" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/fragment1_BTN_hard"
@@ -29,9 +31,10 @@
         android:layout_marginTop="12dp"
 
         android:text="Hard"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:textSize="50sp"
         app:cornerRadius="50dp"
-        app:strokeColor="@color/black" />
+        app:strokeColor="@color/white" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/fragment1_BTN_Top10"
@@ -43,9 +46,10 @@
         android:layout_marginTop="12dp"
 
         android:text="Top10"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
+        android:textSize="50sp"
         app:cornerRadius="50dp"
-        app:strokeColor="@color/black" />
+        app:strokeColor="@color/white" />
 
 
 
